--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body class="grey lighten-4">
     <nav class="z-depth-5">
-      <div class="nav-wrapper">
+      <div class="nav-wrapper container">
         <a href="#" class="brand-logo">Logo</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a href="sass.html">Sass</a></li>
