--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
   <body class="grey lighten-4">
     <nav class="z-depth-5">
       <div class="nav-wrapper container">
-        <a href="#" class="brand-logo">Logo</a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <!-- <a href="#" class="brand-logo">Logo</a> -->
+        <a href="/">Food <span>GeGe</span></a>
+        <!-- <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a href="sass.html">Sass</a></li>
           <li><a href="badges.html">Components</a></li>
           <li><a href="collapsible.html">JavaScript</a></li>
-        </ul>
+        </ul> -->
+        <span class="right grey-text"><i>menu</i></span>
       </div>
     </nav>
     <!--JavaScript at end of body for optimized loading-->
