--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
           <li><a href="badges.html">Components</a></li>
           <li><a href="collapsible.html">JavaScript</a></li>
         </ul> -->
-        <span class="right grey-text"><i>menu</i></span>
+        <span class="right grey-text text-darken-1"
+          ><i class="material-icons">menu</i></span
+        >
       </div>
     </nav>
     <!--JavaScript at end of body for optimized loading-->
