--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
     <nav class="z-depth-5">
       <div class="nav-wrapper container">
         <!-- <a href="#" class="brand-logo">Logo</a> -->
-        <a href="/">Food <span>GeGe</span></a>
+        <a href="javascript:void(0)">Food <span>GeGe</span></a>
         <!-- <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a href="sass.html">Sass</a></li>
           <li><a href="badges.html">Components</a></li>
           <li><a href="collapsible.html">JavaScript</a></li>
         </ul> -->
         <span class="right grey-text text-darken-1"
-          ><i class="material-icons">menu</i></span
+          ><i class="material-icons sidenav-trigger" data-target="side-menu"
+            >menu</i
+          ></span
         >
       </div>
     </nav>
