--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     />
   </head>
   <body class="grey lighten-4">
+    <!-- top nav -->
     <nav class="z-depth-5">
       <div class="nav-wrapper container">
         <!-- <a href="#" class="brand-logo">Logo</a> -->
@@ -27,12 +28,55 @@
           <li><a href="collapsible.html">JavaScript</a></li>
         </ul> -->
         <span class="right grey-text text-darken-1"
-          ><i class="material-icons sidenav-trigger" data-target="side-menu"
+          ><i class="material-icons sidenav-trigger" data-target="slide-out"
             >menu</i
           ></span
         >
       </div>
     </nav>
+
+    <!-- side nav -->
+    <nav><!-- navbar content here  --></nav>
+    <ul id="slide-out" class="sidenav slide-out">
+      <li>
+        <div class="user-view">
+          <div class="background">
+            <img src="images/office.jpg" alt="image" />
+          </div>
+          <a href="#user"
+            ><img class="circle" src="images/yuna.jpg" alt="yuna"
+          /></a>
+          <a href="#name"><span class="white-text name">John Doe</span></a>
+          <a href="#email"
+            ><span class="white-text email">jdandturk@gmail.com</span></a
+          >
+        </div>
+      </li>
+      <li>
+        <a href="#!"><i class="material-icons">cloud</i>First Link With Icon</a>
+      </li>
+      <li><a href="#!">Second Link</a></li>
+      <li><div class="divider"></div></li>
+      <li><a class="subheader">Subheader</a></li>
+      <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
+    </ul>
+    <a href="#" data-target="slide-out" class="sidenav-trigger"
+      ><i class="material-icons">menu</i></a
+    >
+
+    <div class="row">
+      <div class="col s12 m5">
+        <div class="card-panel teal">
+          <span class="white-text"
+            >I am a very simple card. I am good at containing small bits of
+            information. I am convenient because I require little markup to use
+            effectively. I am similar to what is called a panel in other
+            frameworks.
+          </span>
+        </div>
+      </div>
+    </div>
+
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
   </body>
