--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>pwa from materialize-v1.0.0</title>
     <!--Import Google Icon Font-->
     <link
@@ -16,6 +16,7 @@
       href="css/materialize.min.css"
       media="screen,projection"
     />
+    <link type="text/css" href="/css/styles.css" rel="stylesheet" />
   </head>
   <body class="grey lighten-4">
     <!-- top nav -->
@@ -29,7 +30,7 @@
           <li><a href="collapsible.html">JavaScript</a></li>
         </ul> -->
         <span class="right grey-text text-darken-1"
-          ><i class="material-icons sidenav-trigger" data-target="slide-out"
+          ><i class="material-icons sidenav-trigger" data-target="side-menu"
             >menu</i
           ></span
         >
@@ -37,35 +38,19 @@
     </nav>
 
     <!-- side nav -->
-    <nav><!-- navbar content here  --></nav>
-    <ul id="slide-out" class="sidenav slide-out">
-      <li>
-        <div class="user-view">
-          <div class="background">
-            <img src="images/office.jpg" alt="image" />
-          </div>
-          <a href="#user"
-            ><img class="circle" src="images/yuna.jpg" alt="yuna"
-          /></a>
-          <a href="#name"><span class="white-text name">John Doe</span></a>
-          <a href="#email"
-            ><span class="white-text email">jdandturk@gmail.com</span></a
-          >
-        </div>
-      </li>
-      <li>
-        <a href="#!"><i class="material-icons">cloud</i>First Link With Icon</a>
-      </li>
-      <li><a href="#!">Second Link</a></li>
+    <ul id="side-menu" class="sidenav side-menu">
+      <li><a class="subheader">FOODgege</a></li>
+      <li><a href="/" class="waves-effect">Home</a></li>
+      <li><a href="/pages/about.html" class="waves-effect">About</a></li>
       <li><div class="divider"></div></li>
-      <li><a class="subheader">Subheader</a></li>
-      <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
+      <li>
+        <a href="/pages/contact.html" class="waves-effect">
+          <i class="material-icons">mail_outline</i>Contact</a
+        >
+      </li>
     </ul>
-    <a href="#" data-target="slide-out" class="sidenav-trigger"
-      ><i class="material-icons">menu</i></a
-    >
 
-    <div class="row">
+    <!-- <div class="row">
       <div class="col s12 m5">
         <div class="card-panel teal">
           <span class="white-text"
@@ -76,7 +61,112 @@
           </span>
         </div>
       </div>
+    </div> -->
+
+    <!-- recipes -->
+    <div class="recipes container grey-text text-darken-1">
+      <div class="card-panel recipe white row">
+        <img src="/img/dish.webp" alt="recipe thumb" />
+        <div class="recipe-details">
+          <div class="recipe-title">
+            Dish Name: Roasted Spaghetti Squash with Ground Turkey and
+            Vegetables
+          </div>
+          <div class="recipe-ingredients">
+            Ingredients: spaghetti squash, ground turkey, sauteed asparagus,
+            tomatoes, basil, onion, and garlic
+          </div>
+        </div>
+        <div class="recipe-delete">
+          <i class="material-icons">delete_outline</i>
+        </div>
+      </div>
+      <div class="card-panel recipe white row">
+        <img src="/img/dish.webp" alt="recipe thumb" />
+        <div class="recipe-details">
+          <div class="recipe-title">
+            Roasted Spaghetti Squash with Ground Turkey and Vegetables
+          </div>
+          <div class="recipe-ingredients">
+            spaghetti squash, ground turkey, sauteed asparagus, tomatoes, basil,
+            onion, and garlic
+          </div>
+        </div>
+        <div class="recipe-delete">
+          <i class="material-icons">delete_outline</i>
+        </div>
+      </div>
+      <div class="card-panel recipe white row">
+        <img src="/img/dish.webp" alt="recipe thumb" />
+        <div class="recipe-details">
+          <div class="recipe-title">
+            Roasted Spaghetti Squash with Ground Turkey and Vegetables
+          </div>
+          <div class="recipe-ingredients">
+            spaghetti squash, ground turkey, sauteed asparagus, tomatoes, basil,
+            onion, and garlic
+          </div>
+        </div>
+        <div class="recipe-delete">
+          <i class="material-icons">delete_outline</i>
+        </div>
+      </div>
+      <div class="card-panel recipe white row">
+        <img src="/img/dish.webp" alt="recipe thumb" />
+        <div class="recipe-details">
+          <div class="recipe-title">
+            Roasted Spaghetti Squash with Ground Turkey and Vegetables
+          </div>
+          <div class="recipe-ingredients">
+            spaghetti squash, ground turkey, sauteed asparagus, tomatoes, basil,
+            onion, and garlic
+          </div>
+        </div>
+        <div class="recipe-delete">
+          <i class="material-icons">delete_outline</i>
+        </div>
+      </div>
     </div>
+
+    <div class="center">
+      <a
+        class="btn-floating btn-small btn-large add-btn sidenav-trigger"
+        data-target="side-form"
+      >
+        <i class="material-icons">add</i>
+      </a>
+    </div>
+
+    <!-- add recipe side nav -->
+    <div id="side-form" class="sidenav side-form">
+      <form class="add-recipe container section">
+        <h6>New Recipe</h6>
+        <div class="divider"></div>
+        <div class="input-field">
+          <input
+            placeholder="e.g. gege soup"
+            id="title"
+            type="text"
+            class="validate"
+          />
+          <label for="title">Recipe Title</label>
+        </div>
+        <div class="input-field">
+          <input
+            placeholder="e.g. Tofu, mushroom, garlic"
+            id="ingredients"
+            type="text"
+            class="validate"
+          />
+          <label for="ingredients">Ingredients</label>
+        </div>
+        <div class="input-field center">
+          <button class="btn-small">Add</button>
+        </div>
+      </form>
+    </div>
+
+    <script src="/js/ui.js"></script>
 
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
