--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Food Ninja</title>
+    <title>Food GeGe</title>
     <!-- materialize icons, css & js -->
     <link type="text/css" href="/css/materialize.min.css" rel="stylesheet" />
     <link
@@ -17,7 +17,7 @@
     <!-- top nav -->
     <nav class="z-depth-0">
       <div class="nav-wrapper container">
-        <a href="/">Food<span>Ninja</span></a>
+        <a href="/">Food<span>GeGe</span></a>
         <span class="right grey-text text-darken-1">
           <i class="material-icons sidenav-trigger" data-target="side-menu"
             >menu</i
@@ -28,7 +28,7 @@
 
     <!-- side nav -->
     <ul id="side-menu" class="sidenav side-menu">
-      <li><a class="subheader">FOODNINJA</a></li>
+      <li><a class="subheader">FOOD GeGe</a></li>
       <li><a href="/" class="waves-effect">Home</a></li>
       <li><a href="/pages/about.html" class="waves-effect">About</a></li>
       <li><div class="divider"></div></li>
@@ -51,8 +51,8 @@
       <div class="divider"></div>
       <h6>Find us at:</h6>
       <ul>
-        <li>123 Spicy Noodle Road</li>
-        <li>Manchester, UK</li>
+        <li>123 Spaghetti Squash Road</li>
+        <li>Manchester, Iowa</li>
       </ul>
     </div>
 
