--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       media="screen,projection"
     />
     <link type="text/css" href="/css/styles.css" rel="stylesheet" />
+    <link rel="manifest" href="/manifest.json">
   </head>
   <body class="grey lighten-4">
     <!-- top nav -->
